// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextareaField component renders 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-dpNEPi {
    color: var(--colors-grey900);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-bhkMIq {
    box-shadow: none;
    font-size: var(--fontSizes-md);
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-0);
    box-sizing: border-box;
    color: var(--colors-grey1000);
    font-family: var(--fonts-body);
    font-weight: 400;
    line-height: 1.4;
    min-height: var(--sizes-7);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: calc(var(--space-2) + var(--space-1));
    padding-bottom: calc(var(--space-2) + var(--space-1));
    resize: vertical;
    transition: all 75ms ease-out;
    width: 100%;
  }

  .c-bhkMIq:focus {
    border-color: var(--colors-primary800);
    outline: none;
  }

  .c-bhkMIq[disabled] {
    background-color: var(--colors-grey200);
    color: var(--colors-grey800);
    cursor: not-allowed;
  }

  .c-bhkMIq::placeholder {
    color: var(--colors-grey700);
    opacity: 1;
  }
}

@media  {
  .c-dpNEPi-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dpNEPi-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dpNEPi-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-dpNEPi-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }
}

@media  {
  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-dpNEPi c-dpNEPi-gvmVBy-size-md c-dpNEPi-grKRUr-type-block"
          for="description"
        />
      </div>
      <textarea
        class="c-bhkMIq"
        id="description"
        name="description"
        placeholder="placeholder"
      />
    </div>
  </form>
</div>
`;

exports[`TextareaField component renders with an error 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-dpNEPi {
    color: var(--colors-grey900);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-bhkMIq {
    box-shadow: none;
    font-size: var(--fontSizes-md);
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-0);
    box-sizing: border-box;
    color: var(--colors-grey1000);
    font-family: var(--fonts-body);
    font-weight: 400;
    line-height: 1.4;
    min-height: var(--sizes-7);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    padding-top: calc(var(--space-2) + var(--space-1));
    padding-bottom: calc(var(--space-2) + var(--space-1));
    resize: vertical;
    transition: all 75ms ease-out;
    width: 100%;
  }

  .c-bhkMIq:focus {
    border-color: var(--colors-primary800);
    outline: none;
  }

  .c-bhkMIq[disabled] {
    background-color: var(--colors-grey200);
    color: var(--colors-grey800);
    cursor: not-allowed;
  }

  .c-bhkMIq::placeholder {
    color: var(--colors-grey700);
    opacity: 1;
  }
}

@media  {
  .c-dpNEPi-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dpNEPi-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dpNEPi-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-dpNEPi-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }
}

@media  {
  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-dpNEPi c-dpNEPi-gvmVBy-size-md c-dpNEPi-grKRUr-type-block"
          for="description"
        />
      </div>
      <textarea
        class="c-bhkMIq"
        error="Error Message"
        id="description"
        name="description"
        placeholder="placeholder"
      />
    </div>
  </form>
</div>
`;
